@@ -1,4 +1,10 @@
 
+[*] Wed Nov 20 2002 - netcat (cvs)
+
+  o Added command line switch `-c' (close), which shuts down the connection
+    on EOF from stdin without waiting for any answer from remote host.
+
+
 [*] Tue Oct 15 2002 - netcat v0.6.1
 
   o Fixed a compilation error in the "doc/" subdirectory when using virtual
